tests/baselines/reference/moduleAugmentationsImports4.errors.txt
main.ts(3,1): error TS18056: Declaration file contains hand-written file reference directives: "d.d.ts", "e.d.ts"


==== main.ts (1 errors) ====
    /// <reference path="d.d.ts"/>
    /// <reference path="e.d.ts"/>
    import {A} from "./a";
    ~~~~~~
!!! error TS18056: Declaration file contains hand-written file reference directives: "d.d.ts", "e.d.ts"
    import "D";
    import "E";
    
    let a: A;
    let b = a.getB().x.toFixed();
    let c = a.getCls().y.toLowerCase();
    
==== a.ts (0 errors) ====
    export class A {}
    
==== b.ts (0 errors) ====
    export class B {x: number;}
    
==== c.d.ts (0 errors) ====
    declare module "C" {
        class Cls {y: string; }
    }
    
==== d.d.ts (0 errors) ====
    declare module "D" {
        import {A} from "a";
        import {B} from "b";
        module "a" {
            interface A {
                getB(): B;
            }
        }
    }
    
==== e.d.ts (0 errors) ====
    /// <reference path="c.d.ts"/>
    declare module "E" {
        import {A} from "a";
        import {Cls} from "C";
    
        module "a" {
            interface A {
                getCls(): Cls;
            }
        }
    }
    